wayland: Resize the client to last requested client size if decoration is destroyed

If the decoration is destroyed before the window is mapped, kwin can
respond with a configure event that has 0x0 size. New tests check that
problematic case.

BUG: 444962
(cherry picked from commit 9cc80d7468c92a2800daf98319e626e022ff1045)