src/abstract_client.cpp
@@ -2361,8 +2361,9 @@ void AbstractClient::createDecoration(const QRect &oldGeometry)
 
 void AbstractClient::destroyDecoration()
 {
+    const QSize clientSize = frameSizeToClientSize(moveResizeGeometry().size());
     setDecoration(nullptr);
-    resize(clientSizeToFrameSize(clientSize()));
+    resize(clientSize);
 }
 
 void AbstractClient::setDecoration(KDecoration2::Decoration *decoration)
